bug fixed to horizontal scroll

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,9 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+body
+  overflow-x: hidden;
+
 .navbar .navbar-menu
   box-shadow: none !important
 
@@ -50,8 +53,8 @@ $black: #2b2523
   display: flex
   justify-content: center
   align-items: center
-.svg-icon 
-  width: 120px
+// .svg-icon 
+//   width: 120px
 
 .btn
   display: inline-block
@@ -146,7 +149,6 @@ $menu-label-color: $white-ter
   &:hover
     color: #3273dc;
 .section
-  padding: 1rem 0;
-  
+  padding: 1rem 0rem;
 .section p,h3
   padding: 1rem 1.5rem;
